--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
+    "fa-icons": "^0.2.0",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.476.0",
     "mottion": "^0.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
